@@ -72,6 +72,7 @@
 				F58C8A07025BD3BC018635CA,
 				F531DDFF02F0C36F018635CA,
 			);
+			hasScannedForEncodings = 1;
 			isa = PBXProject;
 			knownRegions = (
 				English,
@@ -282,7 +283,6 @@
 				35F357800198AAB80ACA1520,
 				F5B67131023EDF8901C1A525,
 				F5883BDF025E5C6A01000102,
-				F599A818028C6D0D0124FDD6,
 				F8CA15C0029A39FC01000122,
 			);
 			isa = PBXResourcesBuildPhase;
@@ -380,7 +380,6 @@
 			children = (
 				35F3577E0198AAB80ACA1520,
 				089C1666FE841158C02AAC07,
-				F599A817028C6D0D0124FDD6,
 				F5B67130023EDF8901C1A525,
 				F5883BDE025E5C6A01000102,
 				F5F732D202FF4D4F01A80180,
@@ -1941,18 +1940,6 @@
 		};
 		F59668CB02AD2923018635CA = {
 			fileRef = F59668C902AD2923018635CA;
-			isa = PBXBuildFile;
-			settings = {
-			};
-		};
-		F599A817028C6D0D0124FDD6 = {
-			isa = PBXFileReference;
-			name = bookmark_folder.tiff;
-			path = Resources/bookmark_folder.tiff;
-			refType = 4;
-		};
-		F599A818028C6D0D0124FDD6 = {
-			fileRef = F599A817028C6D0D0124FDD6;
 			isa = PBXBuildFile;
 			settings = {
 			};
